--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <h1>🐾 Pawfect Rescue 🐾</h1>
         <nav>
+            <div class="icon">
+                <i id="bar" class="fa-solid fa-bars"></i>
+            </div>
             <ul>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#adopt">Adopt</a></li>
@@ -117,5 +120,6 @@
             </div>
           </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
