--- a/adopt.html
+++ b/adopt.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Animal Details</title>
-  <link rel="stylesheet" href="adopt.css">
+   <link rel="stylesheet" href="adopt.css">
 </head>
 <body>
   <header>
@@ -22,30 +22,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    // Function to get URL parameters
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
-
-    // Load animal details into the page
-    document.addEventListener("DOMContentLoaded", () => {
-      const name = getQueryParam("name");
-      const breed = getQueryParam("breed");
-      const location = getQueryParam("location");
-      const image = getQueryParam("image");
-
-      document.getElementById("animal-name").innerText = name;
-      document.getElementById("animal-breed").innerText = breed;
-      document.getElementById("animal-location").innerText = location;
-      document.getElementById("animal-image").src = image;
-
-      document.getElementById("adopt-now-btn").addEventListener("click", () => {
-        alert(`Thank you for adopting ${name}!`);
-      });
-    });
-  </script>
+  <script src="adopt.js"></script>
 </body>
 </html>
