--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#adopt">Adopt</a></li>
-                <li><a href="#donate">Donate</a></li>
+                <li><a href="donation.html">Donate</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -107,7 +107,7 @@
             <div class="box">
                 <h3>Support our cause</h3>
                 <p>Your donations help us rescue more animals and provide them with the care they deserve.</p>
-                <a id="donate" class="btn">Donate Now</a>
+                <a id="donate" class="btn" href="donation.html">Donate Now</a>
             </div>
         </div>
 
